--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "browser-image-compression": "^2.0.2",
+    "mongoose": "^8.19.3",
     "next": "16.0.1",
     "react": "19.2.0",
+    "react-calendar": "^6.0.0",
+    "react-countup": "^6.5.3",
+    "react-date-picker": "^12.0.1",
     "react-dom": "19.2.0",
     "react-headroom": "^3.2.1",
     "react-icons": "^5.5.0"
